{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 291,
  "lineage": "a0309ce7-3963-6211-d8f6-e1fc01540505",
  "resources": [
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:security-group/sg-055a064c46301b4c3",
            "description": "security group for bastion instance",
            "egress": [],
            "id": "sg-055a064c46301b4c3",
            "ingress": [],
            "name": "bastion_security_group-20211113200742079000000002",
            "name_prefix": "bastion_security_group-",
            "owner_id": "124876057204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_security_group"
            },
            "tags_all": {
              "Name": "bastion_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "User-service ports",
            "from_port": 22,
            "id": "sgrule-4018642772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-055a064c46301b4c3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion_sg.aws_security_group.this",
            "module.bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance2[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this_t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:124876057204:instance/i-0634c70f46444ee46",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0634c70f46444ee46",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Public_Subnet_EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-039347b6bd770102c",
            "private_dns": "ip-10-0-1-65.ec2.internal",
            "private_ip": "10.0.1.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2089df4f347f492",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2f1a82778900ef2",
            "tags": {
              "Environment": "dev",
              "Name": "private_ec2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private_ec2",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "private_ec2"
            },
            "vpc_security_group_ids": [
              "sg-0b23d0dd26b94a937"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2",
            "module.private_EC2_sg.aws_security_group.this",
            "module.private_EC2_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance2[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this_t2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:124876057204:instance/i-0d3fa65a95a158c47",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3fa65a95a158c47",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Public_Subnet_EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-053096c5e78160ab0",
            "private_dns": "ip-10-0-2-88.ec2.internal",
            "private_ip": "10.0.2.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-016285a45f89ecebd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e00073744072daa",
            "tags": {
              "Environment": "dev",
              "Name": "private_ec2",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private_ec2",
              "Terraform": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "private_ec2"
            },
            "vpc_security_group_ids": [
              "sg-0b23d0dd26b94a937"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2",
            "module.private_EC2_sg.aws_security_group.this",
            "module.private_EC2_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e136e904f3da870",
            "arn": "arn:aws:ec2:us-east-1:124876057204:instance/i-073b8031782f3a822",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073b8031782f3a822",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Public_Subnet_EC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d000cc77b91e256b",
            "private_dns": "ip-10-0-102-105.ec2.internal",
            "private_ip": "10.0.102.105",
            "public_dns": "ec2-44-192-106-25.compute-1.amazonaws.com",
            "public_ip": "44.192.106.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00a5fbeae57360b50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a50d2c97b1d83e05",
            "tags": {
              "Environment": "dev",
              "Name": "bastion_host",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "bastion_host",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "bastion_host"
            },
            "vpc_security_group_ids": [
              "sg-055a064c46301b4c3"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux_2",
            "module.bastion_sg.aws_security_group.this",
            "module.bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_EC2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:security-group/sg-0b23d0dd26b94a937",
            "description": "Security group for",
            "egress": [],
            "id": "sg-0b23d0dd26b94a937",
            "ingress": [],
            "name": "SG_PRIV-20211113200742065900000001",
            "name_prefix": "SG_PRIV-",
            "owner_id": "124876057204",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_PRIV"
            },
            "tags_all": {
              "Name": "SG_PRIV"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_EC2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "User-service ports",
            "from_port": 22,
            "id": "sgrule-4216221291",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b23d0dd26b94a937",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_EC2_sg.aws_security_group.this",
            "module.private_EC2_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "User-service ports",
            "from_port": 80,
            "id": "sgrule-1999023957",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b23d0dd26b94a937",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_EC2_sg.aws_security_group.this",
            "module.private_EC2_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e13b2a9f8d25227e",
            "domain": "vpc",
            "id": "eipalloc-0e13b2a9f8d25227e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-137-61.compute-1.amazonaws.com",
            "public_ip": "3.232.137.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-us-east-1a",
              "Owner": "soho_yeo"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-us-east-1a",
              "Owner": "soho_yeo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:internet-gateway/igw-0dfb12fbde13caa08",
            "id": "igw-0dfb12fbde13caa08",
            "owner_id": "124876057204",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc",
              "Owner": "soho_yeo"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc",
              "Owner": "soho_yeo"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e13b2a9f8d25227e",
            "connectivity_type": "public",
            "id": "nat-03c8d639b2e46d314",
            "network_interface_id": "eni-0fc79f8978908e7cd",
            "private_ip": "10.0.101.220",
            "public_ip": "3.232.137.61",
            "subnet_id": "subnet-0d0b027d291fd9f8c",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-us-east-1a",
              "Owner": "soho_yeo"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-us-east-1a",
              "Owner": "soho_yeo"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0276e32047e58d3bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03c8d639b2e46d314",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0276e32047e58d3bd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dfb12fbde13caa08",
            "id": "r-rtb-0891be942b274509c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0891be942b274509c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:route-table/rtb-0dfd8355c523808d3",
            "id": "rtb-0dfd8355c523808d3",
            "owner_id": "124876057204",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-db",
              "Owner": "soho_yeo"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-db",
              "Owner": "soho_yeo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:route-table/rtb-0276e32047e58d3bd",
            "id": "rtb-0276e32047e58d3bd",
            "owner_id": "124876057204",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-private",
              "Owner": "soho_yeo"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-private",
              "Owner": "soho_yeo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:route-table/rtb-0891be942b274509c",
            "id": "rtb-0891be942b274509c",
            "owner_id": "124876057204",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-public",
              "Owner": "soho_yeo"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-public",
              "Owner": "soho_yeo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5d4a0b4d139457c",
            "route_table_id": "rtb-0dfd8355c523808d3",
            "subnet_id": "subnet-014a20ba9cc8ccf86"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a28aeed797e69b9d",
            "route_table_id": "rtb-0dfd8355c523808d3",
            "subnet_id": "subnet-01ddae8d60e467f6a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0536f20e5cbf5cbf5",
            "route_table_id": "rtb-0276e32047e58d3bd",
            "subnet_id": "subnet-0d2f1a82778900ef2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03891ab0ff889acdd",
            "route_table_id": "rtb-0276e32047e58d3bd",
            "subnet_id": "subnet-01e00073744072daa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cec80d3ff1d92fbe",
            "route_table_id": "rtb-0891be942b274509c",
            "subnet_id": "subnet-0d0b027d291fd9f8c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9ca5ab0a366b3a2",
            "route_table_id": "rtb-0891be942b274509c",
            "subnet_id": "subnet-0a50d2c97b1d83e05"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:subnet/subnet-014a20ba9cc8ccf86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-014a20ba9cc8ccf86",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124876057204",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-db-us-east-1a",
              "Owner": "soho_yeo",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-db-us-east-1a",
              "Owner": "soho_yeo",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:subnet/subnet-01ddae8d60e467f6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-01ddae8d60e467f6a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124876057204",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-db-us-east-1b",
              "Owner": "soho_yeo",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-db-us-east-1b",
              "Owner": "soho_yeo",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:subnet/subnet-0d2f1a82778900ef2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d2f1a82778900ef2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124876057204",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-private-us-east-1a",
              "Owner": "soho_yeo",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-private-us-east-1a",
              "Owner": "soho_yeo",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:subnet/subnet-01e00073744072daa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01e00073744072daa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "124876057204",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-private-us-east-1b",
              "Owner": "soho_yeo",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-private-us-east-1b",
              "Owner": "soho_yeo",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:subnet/subnet-0d0b027d291fd9f8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0d0b027d291fd9f8c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124876057204",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-public-us-east-1a",
              "Owner": "soho_yeo",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-public-us-east-1a",
              "Owner": "soho_yeo",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:subnet/subnet-0a50d2c97b1d83e05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0a50d2c97b1d83e05",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "124876057204",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-public-us-east-1b",
              "Owner": "soho_yeo",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc-public-us-east-1b",
              "Owner": "soho_yeo",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0a9431a7bb9195a46"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:124876057204:vpc/vpc-0a9431a7bb9195a46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f906ce3b4e5809ba",
            "default_route_table_id": "rtb-06875cbd08d45d3cd",
            "default_security_group_id": "sg-0eaac112db106f228",
            "dhcp_options_id": "dopt-ec0f5a96",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a9431a7bb9195a46",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06875cbd08d45d3cd",
            "owner_id": "124876057204",
            "tags": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc",
              "Owner": "soho_yeo"
            },
            "tags_all": {
              "Environment": "SRE",
              "Name": "terraform-Diligent-vpc",
              "Owner": "soho_yeo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}